--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Scratch</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-</head>
+@import url('https://fonts.googleapis.com/css?family=Mukta');
 
-<body>
-    <div class="field">
-        <div class="tools">
-            <button onclick="Clear()" type="button" class = "button">Clear</button>
 
-            <div onclick="change_color(this)" class="color-field" style="background: red;"></div>
-            <div onclick="change_color(this)" class="color-field" style="background: blue;"></div>
-            <div onclick="change_color(this)" class="color-field" style="background: green;"></div>
-            <div onclick="change_color(this)" class="color-field" style="background: yellow;"></div>
-            
-            <input oninput="stroke_color = this.value" type="color" class="color-picker">
-            <input oninput="stroke_width = this.value" type="range" min = "1" max = "100" class="pen-range">
-        </div>
-        <canvas id="canvas"></canvas>
-    </div>
-</body>
-<script src="script.js">  </script>
-</html>
+body{
+    margin: 0px;
+    padding: 30px;
+    font-family: "Mukta";
+    overflow: hidden;
+    background:#313131;
+}
+canvas{
+    box-shadow: -3px 2px 9px 6px;
+    cursor:pointer;
+}
+.tools{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-top: 15px;
+    margin-bottom: 25px;
+
+}
+.tools .color-field{
+    height: 40px;
+    width: 40px;
+    min-height: 40px;
+    min-width: 40px;
+    cursor: pointer;
+    display: inline-block;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 50%;
+    border: 2px solid white;
+    align-self: center;
+    margin: 0 10px;
+}
+
+.tools .button{
+    align-self: center;
+    width: 100px;
+    height: 40px;
+    border: 2px solid white;
+    cursor: pointer;
+    color: white;
+    background: #222;
+    font-weight: bold;
+    margin: 0 10px;
+}
+
+.color-picker{
+    height: 40px;
+    width: 40px;
+    min-height: 40px;
+    min-width: 40px;
+    cursor: pointer;
+    display: inline-block;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 20%;
+    background:white;
+    align-self: center;
+    margin: 0 10px;
+}
+
+.pen-range{
+    align-self: center;
+    margin:0 10px;
+    cursor: pointer;
+    background:tomato;
+}
